--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,12 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitReturns": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
+
