--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/qrcode": "^1.5.6",
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
@@ -55,12 +56,15 @@
     "embla-carousel-react": "8.5.1",
     "eslint-config-next": "^16.0.7",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
     "next": "^16.0.7",
     "next-themes": "^0.4.4",
-    "react": "^19.2.1",
+    "qrcode": "^1.5.4",
+    "react": "^19.2.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.2.1",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.1",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
@@ -74,8 +78,8 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.5",
